--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet" />
-    <link rel="icon" href="./logo.jpg" />
+    <link rel="icon" href="./icon.png" />
     <title>Admin Portal</title>
   </head>
   <body>
